Atencion a observaciones Delineacion Urbana (validacion campo "valor de retencion")

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3430,6 +3430,7 @@ delineacion.urbana.dec.areasusos.fecfinalobra= Fecha de finalización de obra
 
 delineacion.urbana.dec.liqpriv.title=Liquidación
 delineacion.urbana.dec.liqpriv.totobrcons=Total Presupuesto de Obra o construcción
+delineacion.urbana.dec.liqpriv.valorExencion=Valor de exención
 delineacion.urbana.dec.liqpriv.valorcons=Valor ejecutado de obra o construcción
 delineacion.urbana.dec.liqpriv.impcargo=Impuesto a Cargo
 delineacion.urbana.dec.liqpriv.totvalorsanciones=Total valor sanciones
