--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
@@ -102,6 +102,7 @@ type.Customer.networkList.name=Social Networks
 type.Customer.rolList.name=Rols
 type.Customer.exteriorPublicityTaxList.name=Exterior Publicity Tax List
 type.Customer.gasTaxList.name=Gas Tax List
+type.Customer.reteIcaTax.name=ReteICA 
 
 type.SDHAddress.name=Address
 type.SDHAddress.addKind.name=Type
@@ -132,6 +133,9 @@ type.SDHAgent.documentNumber.name=Document Number
 type.SDHAgent.documentType.name=Document Type
 type.SDHAgent.completeName.name=Complete Name
 type.SDHAgent.internalFunction.name=Internal Function
+
+type.SDHReteICATax.consecutive.name=Consecutivo
+type.SDHReteICATax.objectNumber.name=Número de Objeto
 
 type.SDHCustomerRegistrationProcess.token.name=token
 
