--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -103,6 +103,7 @@ type.Customer.networkList.name=Redes Sociales
 type.Customer.rolList.name=Roles
 type.Customer.exteriorPublicityTaxList.name=Impuestos de Publicidad Exterior
 type.Customer.gasTaxList.name=Impuestos de Gasolina
+type.Customer.reteIcaTax.name=ReteICA 
 
 type.SDHAddress.name=Dirección
 type.SDHAddress.addKind.name=Tipo
@@ -133,6 +134,9 @@ type.SDHAgent.documentNumber.name=Número de Documento
 type.SDHAgent.documentType.name=Tipo de Documento
 type.SDHAgent.completeName.name=Nombre Completo
 type.SDHAgent.internalFunction.name=Función Interna
+
+type.SDHReteICATax.consecutive.name=Consecutivo
+type.SDHReteICATax.objectNumber.name=Número de Objeto
 
 type.BaseStore.captchaCheckEnabled.name=Widget de captcha activado
 type.BaseStore.captchaCheckEnabled.description=Widget de captcha activado
