--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -137,6 +137,7 @@ type.SDHAgent.internalFunction.name=Función Interna
 
 type.SDHReteICATax.consecutive.name=Consecutivo
 type.SDHReteICATax.objectNumber.name=Número de Objeto
+type.SDHReteICATax.numID.name=Número ID
 
 type.BaseStore.captchaCheckEnabled.name=Widget de captcha activado
 type.BaseStore.captchaCheckEnabled.description=Widget de captcha activado
