Se agregan cambios a estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4121,7 +4121,7 @@ edocuenta.inicial.ica.numdocu= No. documento
 edocuenta.inicial.ica.visualizar= Visualizar
 edocuenta.inicial.ica.impuesto=Impuesto
 edocuenta.inicial.ica.saldocuenta=Saldo en cuenta
-edocuenta.inicial.ica.tiporegimen=Tipo de régimen
+edocuenta.inicial.ica.tiporegimen=Régimen Tributario
 edocuenta.inicial.ica.aniograv=Año gravable
 edocuenta.inicial.ica.periodo=Periodo
 edocuenta.inicial.ica.estado=Estado
