--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3472,7 +3472,7 @@ delineacion.urbana.radicados.nota.importante= Importante:
 delineacion.urbana.radicados.nota.demas=Si en el siguiente recuadro no aparece un radicado asociado a un CDU debe ingresar en el botón de trámites, crear trámite, modificación de la sujeción pasiva, Delineación Urbana, para agregar dicho radicado.
 
 sobre.vehiculos.table.title= Mis Vehículos
-sobre.vehiculos.table.descripcion= El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá. Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM. Mas Información
+sobre.vehiculos.table.descripcion= El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá. Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM.
 sobre.vehiculo.table.anigrav= Año Gravable
 sobre.vehiculo.table.placa= Placa
 sobre.vehiculo.table.marca = Marca
@@ -3497,9 +3497,9 @@ sobre.vehiculo.detail.feccambio= Fecha cambio servicio
 sobre.vehiculo.detail.feccance= Fecha Cancelación
 
 sobre.vehiculo.juridicos.title= Datos Jurídicos
-sobre.vehiculo.juridicos.tipo= Tipo
+sobre.vehiculo.juridicos.tipo= Tipo de documento
 sobre.vehiculo.juridicos.nomcomple= Nombre Completo
-sobre.vehiculo.juridicos.numero= Número
+sobre.vehiculo.juridicos.numero= Número de documento
 sobre.vehiculo.juridicos.calidsuje= Calidad del sujeto
 sobre.vehiculo.juridicos.propiedad= % propiedad
 sobre.vehiculo.juridicos.fecdesde= Fecha desde
