Se cambia escritura de archivo por ftp a escritura a un directorio que sea un nfs en un servidor externo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4543,6 +4543,13 @@ reteica.declaracion.firma.numdoc=Número de documento
 reteica.declaracion.firma.nombre=Apellido y Nombres o Razón Social
 reteica.declaracion.firma.firma=Firma
 
+reteica.registro.period.01=Enero - Febrero
+reteica.registro.period.02=Marzo - Abril
+reteica.registro.period.03=Mayo - Junio
+reteica.registro.period.04=Julio - Agosto
+reteica.registro.period.05=Septiembre - Octubre
+reteica.registro.period.06=Noviembre - Diciembre
+
 #Agente Retenedor
 retenedor.servicio.titulo=Mis actividades ReteICA
 retenedor.servicio.descripcion=El sistema de retenciones aplica al impuesto de Industria y Comercio, teniendo en cuenta las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones sobre el impuesto de renta y complementarios.
@@ -4569,6 +4576,7 @@ retenedor.servicio.representantes.fuentedato=Fuente dato
 retenedor.servicio.representantes.regresar=Regresar
 retenedor.servicio.representantes.gendecla=Generar Declaración
 retenedor.servicio.representantes.paglinea=Pago en Línea
+
 
 retenedor.registro.inicial.titulo=Mis Actividades ReteICA
 retenedor.registro.inicial.descrip=El sistema de retenciones se rige en lo aplicable a la naturaleza del impuesto de Industria y Comercio por las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones aplicables al impuesto sobre la renta y complementarios. Más información
