Cambios en vista de declaración de vehículos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4562,6 +4562,7 @@ sobre.vehiculo.declaracion.vehiculo.liq.avalact=Avalúo actual
 sobre.vehiculo.declaracion.vehiculo.liq.taract=Tarifa actual
 sobre.vehiculo.declaracion.vehiculo.liq.clasdh=Clase SDH
 sobre.vehiculo.declaracion.vehiculo.liq.linhomo=Línea homologación
+sobre.vehiculo.declaracion.vehiculo.liq.tipvesdh=Tipo de Vehículo SDH
 sobre.vehiculo.declaracion.vehiculo.liq.apovol=Aporte voluntario
 sobre.vehiculo.declaracion.vehiculo.liq.proapovol=Programa del aporte voluntario
 sobre.vehiculo.declaracion.vehiculo.liq.sancion=Sanción
