--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4272,6 +4272,8 @@ ica.inicial.representantes.regresar=Regresar
 ica.inicial.representantes.presendecla=Generar Declaración
 ica.inicial.representantes.rop=ROP
 ica.inicial.representantes.paglinea=Pago en línea
+ica.inicial.representantes.nota1= Nota:
+ica.inicial.representantes.nota2=“Para generar declaraciones de otras vigencias ingresa por “Declaraciones” en la parte superior de la pantalla”
 
 ica.declaracion.title=Declaración ICA
 ica.declaracion.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
