--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4269,7 +4269,7 @@ ica.inicial.representantes.tiprela=Tipo de relación
 ica.inicial.representantes.fecdesde=Fecha desde
 ica.inicial.representantes.fechasta=Fecha hasta
 ica.inicial.representantes.regresar=Regresar
-ica.inicial.representantes.presendecla=Generar Declaración
+ica.inicial.representantes.presendecla=Generar Declaración Vigencia Actual
 ica.inicial.representantes.rop=ROP
 ica.inicial.representantes.paglinea=Pago en línea
 
@@ -4277,6 +4277,7 @@ ica.declaracion.title=Declaración ICA
 ica.declaracion.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
 ica.declaracion.descripcion2=Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
 ica.declaracion.descripcion3=Antes iniciar el diligenciamiento de la liquidación, recuerda que debes tener actualizado: Número de establecimientos y Actividades económicas.
+ica.declaracion.descripcion4=Para generar declaraciones de otras vigencias ingrese por “Declaraciones” en la parte superior de la pantalla.
 ica.declaracion.table.tipdoc=Tipo de documento
 ica.declaracion.table.numdoc=Número de documento
 ica.declaracion.table.nombre=Nombre
