Ajuste en etiqueta de Certificacion de declaraciones Delineacion Urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2081,6 +2081,7 @@ delineacion.urbana.radicados.seleccionar= Seleccionar
 delineacion.urbana.radicados.regresar= Regresar
 delineacion.urbana.radicados.retencion= Presentar retención
 delineacion.urbana.radicados.declaracion= Presentar declaración
+delineacion.urbana.radicados.generarPDF= Generar PDF
 
 
 predial.unificado.title=Mis Predios
