--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2080,7 +2080,7 @@ delineacion.urbana.radicados.codigoEstrato= Código de estrato
 delineacion.urbana.radicados.seleccionar= Seleccionar
 delineacion.urbana.radicados.regresar= Regresar
 delineacion.urbana.radicados.retencion= Presentar retención
-delineacion.urbana.radicados.declaracion= Presentar declaración
+delineacion.urbana.radicados.declaracion= Generar Declaración vigencia actual
 
 
 predial.unificado.title=Mis Predios
@@ -3302,11 +3302,11 @@ delineacion.urbana.adicionales.areaunidad=Área por unidad
 
 delineacion.urbana.dec.generales.title=Datos Generales
 delineacion.urbana.dec.generales.codigo= Código Delineación Urbana
-delineacion.urbana.dec.generales.anigrav=Año Gravable 
-delineacion.urbana.dec.generales.opuso=Opciones de Uso
-delineacion.urbana.dec.generales.tiplicencia=Tipo de Licencia
-delineacion.urbana.dec.generales.Objetolicencia=Objeto de Licencia
-delineacion.urbana.dec.generales.modlicencia=Modalidad de Licencia
+delineacion.urbana.dec.generales.anigrav=Año gravable 
+delineacion.urbana.dec.generales.opuso=Opciones de uso
+delineacion.urbana.dec.generales.tiplicencia=Tipo de licencia
+delineacion.urbana.dec.generales.Objetolicencia=Objeto de licencia
+delineacion.urbana.dec.generales.modlicencia=Modalidad de licencia
 delineacion.urbana.dec.generales.licencia=Licencia
 delineacion.urbana.dec.generales.cauexen=Causal de exención
 delineacion.urbana.dec.generales.radic=Radicados
@@ -3315,60 +3315,60 @@ delineacion.urbana.dec.generales.radic=Radicados
 delineacion.urbana.dec.areasusos.title= Información de Área y Uso
 delineacion.urbana.dec.areasusos.uso=Uso
 delineacion.urbana.dec.areasusos.areauso=Código de uso
-delineacion.urbana.dec.areasusos.numunidades=No. de Unidades
+delineacion.urbana.dec.areasusos.numunidades=No. de unidades
 delineacion.urbana.dec.areasusos.netuso=Área neta por uso
-delineacion.urbana.dec.areasusos.areainve=Área Intervenida
+delineacion.urbana.dec.areasusos.areainve=Área intervenida
 delineacion.urbana.dec.areasusos.m2area=M2 Área intervenida
 delineacion.urbana.dec.areasusos.total=Total
-delineacion.urbana.dec.areasusos.areaproyin=Áreas del Proyecto Arquitectónico
+delineacion.urbana.dec.areasusos.areaproyin=Áreas del proyecto arquitectónico
 delineacion.urbana.dec.areasusos.netuso=Áreas netas por uso
 delineacion.urbana.dec.areasusos.aream2= Área m2
 delineacion.urbana.dec.areasusos.fechultabo= Fecha de último abono en cuenta
-delineacion.urbana.dec.areasusos.fechejec=Fecha de Ejecutoria
-delineacion.urbana.dec.areasusos.preobra= Presupuesto de Obra
+delineacion.urbana.dec.areasusos.fechejec=Fecha de ejecutoria
+delineacion.urbana.dec.areasusos.preobra= Presupuesto de obra
 delineacion.urbana.dec.areasusos.cauexen= Causal de exención
-delineacion.urbana.dec.areasusos.arnetpro= Áreas del proyecto Arquitectónico
+delineacion.urbana.dec.areasusos.arnetpro= Áreas del proyecto arquitectónico
 delineacion.urbana.dec.areasusos.fecfinalobra= Fecha de finalización de obra
 
 delineacion.urbana.dec.liqpriv.title=Liquidación
-delineacion.urbana.dec.liqpriv.totobrcons=Total Presupuesto de Obra o construcción
+delineacion.urbana.dec.liqpriv.totobrcons=Total presupuesto de obra o construcción
 delineacion.urbana.dec.liqpriv.valorExencion=Valor de exención
 delineacion.urbana.dec.liqpriv.valorcons=Valor ejecutado de obra o construcción
-delineacion.urbana.dec.liqpriv.impcargo=Impuesto a Cargo
+delineacion.urbana.dec.liqpriv.impcargo=Impuesto a cargo
 delineacion.urbana.dec.liqpriv.totvalorsanciones=Total valor sanciones
 delineacion.urbana.dec.liqpriv.totreten=Total retención
 delineacion.urbana.dec.liqpriv.salimpcar=Saldo de impuesto a cargo
 delineacion.urbana.dec.liqpriv.salpag= Saldo a favor
-delineacion.urbana.dec.liqpriv.valpag= Valor a Pagar
-delineacion.urbana.dec.liqpriv.intermora= Interes de Mora
+delineacion.urbana.dec.liqpriv.valpag= Valor a pagar
+delineacion.urbana.dec.liqpriv.intermora= Interés de mora
 delineacion.urbana.dec.liqpriv.totpag=Total a pagar
 delineacion.urbana.dec.liqpriv.calc=Calcular
 
 
 delineacion.urbana.dec.liqpriv.costdire=Costos directos de obra
 delineacion.urbana.dec.liqpriv.costindi=Costos indirectos de obra
-delineacion.urbana.dec.liqpriv.mtcons=Metros de Construcción
+delineacion.urbana.dec.liqpriv.mtcons=Metros de construcción
 delineacion.urbana.dec.liqpriv.mtventa=Metros de venta
 delineacion.urbana.dec.liqpriv.valcomcons=Valor comercial de construcción
 delineacion.urbana.dec.liqpriv.valaproxmet=Valor aproximado del metro de venta
-delineacion.urbana.dec.liqpriv.totprep= Total Presupuesto de Obra o Construcción
-delineacion.urbana.dec.liqpriv.valrete= Valor Retención
+delineacion.urbana.dec.liqpriv.totprep= Total presupuesto de obra o construcción
+delineacion.urbana.dec.liqpriv.valrete= Valor retención
 delineacion.urbana.dec.liqpriv.pago= Pago
 delineacion.urbana.dec.liqpriv.totpag=Total a pagar
 delineacion.urbana.dec.liqpriv.calc=Calcular
 delineacion.urbana.dec.liqpriv.m2=M2
 
 delineacion.urbana.dec.firm.title=Información Firma del Declarante
-delineacion.urbana.dec.firm.tipiden=Tipo de Identificación
-delineacion.urbana.dec.firm.numide=Número de Identificación
+delineacion.urbana.dec.firm.tipiden=Tipo de identificación
+delineacion.urbana.dec.firm.numide=Número de identificación
 delineacion.urbana.dec.firm.nombraz=Apellidos y Nombres o Razón Social
 delineacion.urbana.dec.firm.firma=Firma
-delineacion.urbana.dec.firm.predec=Presentar Declaración
-delineacion.urbana.dec.firm.paglin=Pagar en Línea
+delineacion.urbana.dec.firm.predec=Presentar declaración
+delineacion.urbana.dec.firm.paglin=Pagar en línea
 delineacion.urbana.dec.firm.regresar=Regresar
 delineacion.urbana.dec.firm.cancelar=Cancelar
-delineacion.urbana.dec.firm.prerete= Presentar Retención
-delineacion.urbana.dec.firm.predec= Presentar Declaración
+delineacion.urbana.dec.firm.prerete= Presentar retención
+delineacion.urbana.dec.firm.predec= Presentar declaración
 
 delineacion.urbana.radicados.nota.importante= Importante: 
 delineacion.urbana.radicados.nota.demas=Si en el siguiente recuadro no aparece un radicado asociado a un CDU debe ingresar en el botón de trámites, crear trámite, modificación de la sujeción pasiva, Delineación Urbana, para agregar dicho radicado.
