se agregan cambios a Certificación de declaraciones y generar declaración

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3343,7 +3343,9 @@ delineacion.urbana.dec.liqpriv.valpag= Valor a pagar
 delineacion.urbana.dec.liqpriv.intermora= Interés de mora
 delineacion.urbana.dec.liqpriv.totpag=Total a pagar
 delineacion.urbana.dec.liqpriv.calc=Calcular
-
+delineacion.urbana.radicados.declara=Generar declaración
+delineacion.urbana.radicados.retencion.generar=Generar retención
+delineacion.urbana.radicados.declaracion.pdf=Generar PDF
 
 delineacion.urbana.dec.liqpriv.costdire=Costos directos de obra
 delineacion.urbana.dec.liqpriv.costindi=Costos indirectos de obra
@@ -4092,7 +4094,7 @@ pse.message.info.done.transaction.with.status=Transacción realizada con éxito 
 pse.message.info.success.transaction=Transacción exitosa
 pse.message.info.error.transaction.try.again=Transacción denegada, intente de nuevo
 
-certideclara.inicial.titulo= Certificaciones de Declaración
+certideclara.inicial.titulo= Certificaciones de declaraciones
 certideclara.inicial.tipo= Tipo de certificación
 certideclara.inicial.selcimpuesto= Impuesto
 certideclara.inicial.aniograv= Año Gravable
