cambio en texto de botones de delineación urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3374,6 +3374,8 @@ delineacion.urbana.dec.firm.regresar=Regresar
 delineacion.urbana.dec.firm.cancelar=Cancelar
 delineacion.urbana.dec.firm.prerete= Presentar retención
 delineacion.urbana.dec.firm.predec= Presentar declaración
+delineacion.urbana.radicados.generar.declaracion= Generar declaración vigencia actual
+delineacion.urbana.radicados.generar.retencion=Generar retención
 
 delineacion.urbana.radicados.nota.importante= Importante: 
 delineacion.urbana.radicados.nota.demas=Si en el siguiente recuadro no aparece un radicado asociado a un CDU debe ingresar en el botón de trámites, crear trámite, modificación de la sujeción pasiva, Delineación Urbana, para agregar dicho radicado.
