Se agregan cambios a titulos de tabla CDUs y comportamiento del campo total presupuesto de obra

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3271,30 +3271,30 @@ delineacion.urbana.detail.regresar=Regresar
 delineacion.urbana.detail.direc=Dirección
 
 delineacion.urbana.basic.title=Datos Básicos
-delineacion.urbana.basic.Liceconstruction=Licencia de Construcción
+delineacion.urbana.basic.Liceconstruction=Licencia de construcción
 delineacion.urbana.basic.numresolurevalida=Resolución revalidación
 delineacion.urbana.basic.tipomarca= Tipo de marca
 delineacion.urbana.basic.marca=Marca
 delineacion.urbana.basic.numresoprorroga=Resolución prórroga
 delineacion.urbana.basic.fechrexpe=Fecha expedición
 delineacion.urbana.basic.fechrevalida=Fecha ejecutoría revalidación
-delineacion.urbana.basic.totalPresupuesto=Total Presupuesto Obra/Construcción
-delineacion.urbana.basic.valorEjecutado=Valor Ejecutado Obra/Construcción
+delineacion.urbana.basic.totalPresupuesto=Total presupuesto obra/construcción
+delineacion.urbana.basic.valorEjecutado=Valor ejecutado obra/construcción
 delineacion.urbana.basic.fechfinobra=Fecha fin obra
-delineacion.urbana.basic.fechaInicioObra=Fecha ejecutoría Obra
+delineacion.urbana.basic.fechaInicioObra=Fecha ejecutoría obra
 delineacion.urbana.basic.curaduria=Curaduría
-delineacion.urbana.basic.codigoEstrato=Código de Estrato
-delineacion.urbana.basic.detalleRadicado=Detalle Radicado
-delineacion.urbana.basic.fechresolprorroga=F.Resolución prórroga
+delineacion.urbana.basic.codigoEstrato=Código de estrato
+delineacion.urbana.basic.detalleRadicado=Detalle radicado
+delineacion.urbana.basic.fechresolprorroga=F.resolución prórroga
 delineacion.urbana.basic.numradicado=Número radicado
 delineacion.urbana.basic.fechradicado=Fecha de radicado
 delineacion.urbana.basic.modaLicencia=Modalidad licencia
-delineacion.urbana.basic.numResolucionRevalidacion=No. Resolución Revalidación
+delineacion.urbana.basic.numResolucionRevalidacion=No. resolución revalidación
 
 delineacion.urbana.adicionales.title=Datos Adicionales
 delineacion.urbana.adicionales.numradicado=Número de radicado
 delineacion.urbana.adicionales.chip=CHIP
-delineacion.urbana.adicionales.direcobra=Dirección de Obra
+delineacion.urbana.adicionales.direcobra=Dirección de obra
 delineacion.urbana.adicionales.codpostal=Código Postal
 delineacion.urbana.adicionales.localidad=Localidad
 delineacion.urbana.adicionales.matinmo=Matrícula inmobiliaria
@@ -3396,18 +3396,18 @@ sobre.vehiculo.table.avaluo= Avalúo
 
 sobre.vehiculo.detail.title= Detalle
 sobre.vehiculo.detail.placa= Placa
-sobre.vehiculo.detail.idServicio= Id de Servicio
+sobre.vehiculo.detail.idServicio= Id de servicio
 sobre.vehiculo.detail.idestado= Id Estado
 sobre.vehiculo.detail.watts=Watts
 sobre.vehiculo.detail.clasanti= Clásico o Antiguo
-sobre.vehiculo.detail.cappasa= Capacidad Pasajeros
+sobre.vehiculo.detail.cappasa= Capacidad pasajeros
 sobre.vehiculo.detail.capton= Capacidad toneladas
 sobre.vehiculo.detail.feccambio= Fecha cambio servicio
-sobre.vehiculo.detail.feccance= Fecha Cancelación
+sobre.vehiculo.detail.feccance= Fecha cancelación
 
 sobre.vehiculo.juridicos.title= Datos Jurídicos
 sobre.vehiculo.juridicos.tipo= Tipo de documento
-sobre.vehiculo.juridicos.nomcomple= Nombre Completo
+sobre.vehiculo.juridicos.nomcomple= Nombre completo
 sobre.vehiculo.juridicos.numero= Número de documento
 sobre.vehiculo.juridicos.calidsuje= Calidad del sujeto
 sobre.vehiculo.juridicos.propiedad= % propiedad
@@ -3423,25 +3423,25 @@ sobre.vehiculo.marcas.fecdesde= Fecha desde
 sobre.vehiculo.marcas.fechasta= Fecha hasta
 
 sobre.vehiculo.liqui.title= Liquidación
-sobre.vehiculo.liqui.avaactual= Avalúo Actual
+sobre.vehiculo.liqui.avaactual= Avalúo actual
 sobre.vehiculo.liqui.tarfiactual= Tarifa actual
-sobre.vehiculo.liqui.tipvehiculo= Tipo de Vehículo
+sobre.vehiculo.liqui.tipvehiculo= Tipo de vehículo
 sobre.vehiculo.liqui.regresar= Regresar
-sobre.vehiculo.liqui.descfactura= Descarga de Factura
-sobre.vehiculo.liqui.presdecla= Presentar Declaración
+sobre.vehiculo.liqui.descfactura= Descarga de factura
+sobre.vehiculo.liqui.presdecla= Presentar declaración
 
 
 predial.unificado.table.title= Predial Unificado
 predial.unificado.table.descripcion= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital. Más información. La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predial.unificado.table.chip= CHIP
-predial.unificado.table.matinmobi= Matrícula Inmobiliaria
+predial.unificado.table.matinmobi= Matrícula inmobiliaria
 predial.unificado.table.factura= Factura
 predial.unificado.table.tipdirec= Tipo de dirección
-predial.unificado.table.direcpred= Dirección del Predio
+predial.unificado.table.direcpred= Dirección del predio
 predial.unificado.table.codpostal= Código Postal
-predial.unificado.table.codLocalidad= Código Localidad
+predial.unificado.table.codLocalidad= Código localidad
 predial.unificado.table.estpredio= Estatus del predio
-predial.unificado.table.nomconarren= No. Contrato Arrendamiento
+predial.unificado.table.nomconarren= No. contrato arrendamiento
 predial.unificado.table.fecinactiva= Fecha inactivación
 
 predial.unificado.juridicos.title= Datos Jurídicos
