Cambio de titulo a Certificaciones de declaración en lugar de Certificaciones de declaraciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4099,7 +4099,7 @@ pse.message.info.done.transaction.with.status=Transacción realizada con éxito 
 pse.message.info.success.transaction=Transacción exitosa
 pse.message.info.error.transaction.try.again=Transacción denegada, intente de nuevo
 
-certideclara.inicial.titulo= Certificaciones de declaraciones
+certideclara.inicial.titulo= Certificaciones de declaración
 certideclara.inicial.tipo= Tipo de certificación
 certideclara.inicial.selcimpuesto= Impuesto
 certideclara.inicial.aniograv= Año Gravable
