--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3246,6 +3246,7 @@ consultas.estadoDeCuenta.generarEstadoCuenta = Generar
 #->FIN dev-federico 11/02/2019 textos para Consulta de estado de cuenta
 #->INI dev-federico 12/04/2019 textos para Delineacion urbana
 error.impuestoDelineacion.radicaDelin.error1 = Error al leer información del radicado
+error.impuestoDelineacion.calculoImpuesto.error1.attrib1 = {0}
 #->FIN dev-federico 12/04/2019 textos para Delineacion urbana
 impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
 impuestos.Pago.PSE.continuar = Continuar
