Se agrega base properties para terceros autorizados consultas

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4631,3 +4631,27 @@ sobre.vehiculo.declaracion.moto.firma.regresar=Regresar
 sobre.vehiculo.declaracion.moto.firma.prendeclar=Presentar Declaración
 sobre.vehiculo.declaracion.moto.firma.paglinea=Pagar en Línea
 
+terceros.consultas.inicio.titulo=Entidades Bancarias
+terceros.consultas.inicio.descripcion=Desde el año 2008 y en el marco del plan estrátegico la Dirección de Impuestos de Bogotá se incluyó en el desarrollo del Sistema Tributario SIT II un componente de recepción de información tributaria, encargada de recibir, validar, generar reportes de aceptación o rechazo y cargar en la base de datos tributaria la información transmitida magnéticamente a través de la web, por las entidades bancarias que tienen convenio vigente con la Secretaría Distrital de Hacienda, para la recepción de los tributos distritales.
+terceros.consultas.inicio.consultas=Consultas
+terceros.consultas.inicio.desctri=En esta sección realizarás la consulta del estado de los medios magnéticos transmitidos, pendientes o con errores.
+terceros.consultas.inicio.consuenvio=Consulta estados de envío
+terceros.consultas.inicio.idenvio= ID de envío
+terceros.consultas.inicio.noservicio=No. Servicio
+terceros.consultas.inicio.tiparch=Tipo de archivo
+terceros.consultas.inicio.tipres=Tipo de resultado
+terceros.consultas.inicio.aceptado=Aceptado
+terceros.consultas.inicio.rechazado=Rechazado
+terceros.consultas.inicio.pendiente=Pendiente
+terceros.consultas.inicio.fecenvio=Fecha de envío
+terceros.consultas.inicio.fecnoti=Fecha notificación
+terceros.consultas.inicio.regresar=Regesar
+terceros.consultas.inicio.cancelar=Cancelar
+terceros.consultas.inicio.buscar=Buscar
+terceros.consultas.tabla.idenvio=ID envío
+terceros.consultas.tabla.tiparc=Tipo de archivo
+terceros.consultas.tabla.secuencia=Secuencia
+terceros.consultas.tabla.fecenvio=Fecha de envio
+terceros.consultas.tabla.fecnoti=Fecha notificación
+terceros.consultas.tabla.resultado=Resultado
+
