modificació en la sección de firmas de la declaración de ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4381,7 +4381,7 @@ ica.declaracion.liquidacion.valpag=Valor a pagar
 ica.declaracion.liquidacion.aportvol=¿Desea realizar aporte voluntario?
 
 ica.declaracion.firma.titulo=Firmas
-ica.declaracion.firma.obligado=¿Se necesita firma de otra persona?
+ica.declaracion.firma.obligado=¿Deseas agregar un firmante?
 ica.declaracion.firma.revisor=Revisor/Contador
 ica.declaracion.firma.replegal=Representante Legal
 ica.declaracion.firma.tipoiden=Tipo de Identificación
