--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1833,6 +1833,10 @@ retainingAgent.description=Ingresa aquí si eres Retenedor del Impuesto de Indus
 informationReporters.title=Reportante de información
 informationReporters.description=Ingresa aquí para el reporte de información exógena de Impuestos Distritales
 
+agent.auto.bancaria.titulo=Agente autorizado de entidad bancaria
+agent.auto.bancaria.descripcion= Ingresa aquí si has sido autorizado por una entidad bancaria para realizar alguna actividad.
+agent.auto.contribuyente.titulo= Agente autorizado de un contribuyente
+agent.auto.contribuyente.decripcion=Ingresa aquí si has sido autorizado por un contribuyente de impuestos distritales para realizar trámites.
 
 taxpayers.myinfo=Mi información
 taxpayers.taxes=Impuestos
@@ -4655,3 +4659,14 @@ terceros.consultas.tabla.fecenvio=Fecha de envio
 terceros.consultas.tabla.fecnoti=Fecha notificación
 terceros.consultas.tabla.resultado=Resultado
 
+#Agentes Autorizados
+autorizado.reportar.inicial.titulo=Entidades Bancarias
+autorizado.reportar.inicial.descripcion= Desde el año 2008 y en el marco del plan estratégico la Dirección de Impuestos de Bogotá se incluyó en el desarrollo del Sistema Tributario SIT II un componente de recepción de información tributaria, encargada de recibir, validar, generar reportes de aceptación o rechazo y cargar en la base de datos tributaria la información transmitida magnéticamente a través de la web, por las entidades bancarias que tienen convenio vigente con la Secretaria Distrital de Hacienda, para la recepción de los tributos distritales.
+autorizado.reportar.reportar.titulo= Reportar Información
+autorizado.reportar.reportar.nota= ¡Bienvenido a esta sección! Aquí subirás los archivos que se van a transmitir para iniciar el proceso de validación.
+autorizado.reportar.info.titulo=Información del archivo
+autorizado.reportar.info.tiparch=Tipo de archivo
+autorizado.reportar.info.selarch=Seleccionar Archivo
+autorizado.reportar.info.regresar=Regresar
+autorizado.reportar.info.cancelar=Cancelar
+autorizado.reportar.info.enviar=Enviar
