--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4670,3 +4670,29 @@ autorizado.reportar.info.selarch=Seleccionar Archivo
 autorizado.reportar.info.regresar=Regresar
 autorizado.reportar.info.cancelar=Cancelar
 autorizado.reportar.info.enviar=Enviar
+
+autorizado.consultas.inicial.titulo=Entidades Bancarias
+autorizado.consultas.inicial.descripcion=Desde el año 2008 y en el marco del plan estratégico la Dirección de Impuestos de Bogotá se incluyó en el desarrollo del Sistema Tributario SIT II un componente de recepción de información tributaria, encargada de recibir, validar, generar reportes de aceptación o rechazo y cargar en la base de datos tributaria la información transmitida magnéticamente a través de la web, por las entidades bancarias que tienen convenio vigente con la Secretaria Distrital de Hacienda, para la recepción de los tributos distritales.
+autorizado.consultas.inicial.consultas=Consultas
+autorizado.consultas.inicial.seccion=En esta sección realizáras la consulta de los médios magnéticos transmitidos, pendientes o con errores.
+autorizado.consultas.inicial.consulestados=Consulta estados de envío
+autorizado.consultas.inicial.idenvio=ID de envío
+autorizado.consultas.inicial.nosecuencia=No. secuencia
+autorizado.consultas.inicial.tiparchivo= Tipo de archivo
+autorizado.consultas.inicial.tipresultado=Tipo de resultado
+autorizado.consultas.inicial.aceptado=Aceptado
+autorizado.consultas.inicial.rechazado=Rechazado
+autorizado.consultas.inicial.pendiente=Pendiente
+autorizado.consultas.inicial.fecenvio=Fecha de envío
+autorizado.consultas.inicial.fecnoti=Fecha notificación
+autorizado.consultas.inicial.regresar=Regesar
+autorizado.consultas.inicial.cancelar=Cancelar
+autorizado.consultas.inicial.buscar=Buscar
+
+autorizado.consultas.tabla.idenvio=ID envío
+autorizado.consultas.tabla.tiparc=Tipo de archivo
+autorizado.consultas.tabla.secuencia=Secuencia
+autorizado.consultas.tabla.fecenvio=Fecha de envio
+autorizado.consultas.tabla.fecnoti=Fecha notificación
+autorizado.consultas.tabla.resultado=Resultado
+autorizado.consultas.tabla.reporte=Reporte
