Se agregan vistas de Lista de declaraciones a firmar, Contribuyente representado y lista de contribuyentes para Agentes autorizados

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4740,3 +4740,25 @@ vehiculos.declaracion.firma.regresar=Regresar
 vehiculos.declaracion.firma.prendecla=Presentar declaración
 vehiculos.declaracion.firma.pagliena=Pagar en línea
 
+#agete autorizado seccion contribuyente
+autorizado.inicial.representando=Representando a:
+autorizado.inicial.tipdoc=Tipo de documento
+autorizado.inicial.numdoc=Número de documento
+autorizado.inicial.nombre=Nombre
+
+autorizado.listacontib.titulo=Selecciona el contribuyente que deseas representar
+autorizado.listacontib.tipdoc=Tipo de documento
+autorizado.listacontib.numdoc=Número de documento
+autorizado.listacontib.idcontrib=Id contribuyente
+autorizado.listacontib.nombre=Nombre
+autorizado.listacontib.seleccionar=Seleccionar
+
+autorizado.listadeclaraciones.titulo= Lista de declaraciones a firmar
+autorizado.listadeclaraciones.declarcion= Declaración
+autorizado.listadeclaraciones.impuesto=Impuesto
+autorizado.listadeclaraciones.angrav=Año gravable
+autorizado.listadeclaraciones.periodo=Periodo
+autorizado.listadeclaraciones.estatus=Estatus
+autorizado.listadeclaraciones.seleccionar=Seleccionar
+
+
