Se agrega vista de Generar ROP

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4761,4 +4761,27 @@ autorizado.listadeclaraciones.periodo=Periodo
 autorizado.listadeclaraciones.estatus=Estatus
 autorizado.listadeclaraciones.seleccionar=Seleccionar
 
+#Generación de ROP
+rop.generar.inicial.impuesto=Impuesto
+rop.generar.inicial.aniograv=Año gravable
+rop.generar.inicial.periodo=Periodo
+rop.generar.inicial.buscar=Buscar
+
+rop.generar.pedial.chip=CHIP
+rop.generar.pedial.matinmo=Matrícula inmobiliaria
+rop.generar.pedial.direc=Dirección del predio
+rop.generar.pedial.seleccionar=Seleccionar
+rop.generar.pedial.rop=Generar ROP
+
+rop.generar.ica.tipdoc=Tipo de documento
+rop.generar.ica.numdoc=Número de documento
+rop.generar.ica.seleccionar=Seleccionar
+rop.generar.ica.rop=Generar ROP
+
+rop.generar.puext.numres=Número de resolución
+rop.generar.puext.tipvalla=Tipo de valla
+rop.generar.puext.seleccionar=Seleccionar
+rop.generar.puext.rop=Generar ROP
+
+
 
