Se agrega seccion de tramites a contribuyente

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4783,5 +4783,56 @@ rop.generar.puext.tipvalla=Tipo de valla
 rop.generar.puext.seleccionar=Seleccionar
 rop.generar.puext.rop=Generar ROP
 
+#Tramites Contribuyente
+tramites.menu.inicial.titulo=Trámites
+tramites.menu.inicial.descripcion= En la Oficina Virtual podrás crear y dar seguimiento a tus trámites de una forma muy sencilla
+tramites.menu.inicial.crear=Crear
+tramites.menu.inicial.segui=Seguimiento
+
+tramites.crear.inicial.descrip=Para crear la solicitud, completa los siguientes datos
+tramites.crear.inicial.tiptramite=Tipo de trámite
+tramites.crear.inicial.subtramite=Sub trámite
+tramites.crear.inicial.categoria=Categoría
+tramites.crear.inicial.subcategoria=Sub categoría
+tramites.crear.inicial.mensaje=Mensaje
+tramites.crear.inicial.nota=Máximo 1000 caracteres
+tramites.crear.inicial.adjuntar=Adjuntar documento
+tramites.crear.inicial.cancelar=Cancelar
+tramites.crear.inicial.enviar=Enviar
+tramites.crear.inicial.selarch=Seleccionar archivo
+
+tramites.seguimiento.inicial.titulo=Trámites
+tramites.seguimiento.inicial.descrip=En la Oficina Virtual podrás crear y dar seguimiento a tus trámites de una forma muy sencilla
+tramites.seguimiento.inicial.title=Seguimiento de trámite
+tramites.seguimiento.inicial.desc=¿Quires conocer el seguimiento de tu trámite?
+tramites.seguimiento.inicial.des=Selecciona cómo deseas buscar tu solicitud
+tramites.seguimiento.inicial.numcaso=Número de caso
+tramites.seguimiento.inicial.numrad=Número de radicado
+tramites.seguimiento.inicial.tipdoc=Tipo de documento
+tramites.seguimiento.inicial.numdoc=Número de documento
+tramites.seguimiento.inicial.buscar=Buscar
+tramites.seguimiento.inicial.cancelar=Cancelar
+
+tramites.seguimiento.tabla.numtramite=Número de trámite
+tramites.seguimiento.tabla.numrad=Número de radicado
+tramites.seguimiento.tabla.categ=Categoría
+tramites.seguimiento.tabla.estado=Estado
+
+tramites.seguimiento.detalle.numtam=Núemro de trámite
+tramites.seguimiento.detalle.tiptramite=Tipo de trámite
+tramites.seguimiento.detalle.numrad=Número de radicado
+tramites.seguimiento.detalle.subtramite=Sub trámite
+tramites.seguimiento.detalle.estado=Estado
+tramites.seguimiento.detalle.categoria=Categoría
+tramites.seguimiento.detalle.justi=Justificación
+tramites.seguimiento.detalle.subcategoria=Sub categoría
+tramites.seguimiento.detalle.texto=Texto
+tramites.seguimiento.detalle.docad=Documentos adjuntos
+tramites.seguimiento.detalle.menu=Ir al menú
+
+
+
+
+
 
 
