Cambios en vista de Mi RIT

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4830,6 +4830,8 @@ tramites.seguimiento.detalle.texto=Texto
 tramites.seguimiento.detalle.docad=Documentos adjuntos
 tramites.seguimiento.detalle.menu=Ir al menú
 
+mirit.gas.tax.tipoDoc=Tipo de documento
+
 
 
 
