Se agregan cambios para dejar el menú fijo y se agregan cambios a la vista de mi rit

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -558,7 +558,7 @@ basket.configure.product=Configurar
 basket.select.product=Seleccionar
 
 breadcrumb.cart=Carro
-breadcrumb.home=Iniciar sesión
+breadcrumb.home=Inicio
 breadcrumb.login=Inicio de sesión
 breadcrumb.not.found=Página no encontrada
 
