se agregan cambios a la vista general de la pagina y se cambia etiqueta de .csv a .txt

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4413,7 +4413,7 @@ reteica.inicial.carga.titulo=Carga de archivo
 reteica.inicial.carga.descarga= 1. Descarga el siguiente archivo Excel a tu computador
 reteica.inicial.carga.descargar=Descargar
 reteica.inicial.carga.agrega=2. Agrega las retenciones que necesitas registrar.
-reteica.inicial.carga.guarda= 3. Guarda el archivo en formato .csv y sin cambiar el nombre.
+reteica.inicial.carga.guarda= 3. Guarda el archivo en formato .txt y sin cambiar el nombre.
 reteica.inicial.carga.adjunta= 4. Adjúntalo nuevamente.
 reteica.inicial.carga.seleccionar=Seleccionar archivo:
 reteica.inicial.carga.regresar=Regresar
