Se agrega cambio de altura a la sección de datos generales en el menu y la sección de breadcrumbs, adicional, se ajusta espacio entre el menú y el inicio de la página

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4833,6 +4833,9 @@ tramites.seguimiento.detalle.menu=Ir al menú
 mirit.gas.tax.tipoDoc=Tipo de documento
 
 
+terceros.menu.sim=SIM
+terceros.menu.notarios=Notarios
+
 
 
 
