Se agrega cambio en la vista de recueperar password y se agregan paginas para terceros autorizados

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4836,6 +4836,13 @@ mirit.gas.tax.tipoDoc=Tipo de documento
 terceros.menu.sim=SIM
 terceros.menu.notarios=Notarios
 
+terceros.sim.buscar.iddoc=Id de documento
+terceros.sim.buscar.buscar= Buscar
+
+terceros.notario.buscar.tipdoc=Tipo de documento
+terceros.notario.buscar.numdoc=Número de documento
+terceros.notario.buscar.impuesto=Impuesto
+terceros.notario.buscar.buscar= Buscar
 
 
 
