se agregan cambios en vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3387,6 +3387,9 @@ delineacion.urbana.radicados.nota.demas=Si en el siguiente recuadro no aparece u
 
 sobre.vehiculos.table.title= Mis Vehículos
 sobre.vehiculos.table.descripcion= El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá. Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM.
+sobre.vehiculo.table.tipdoc=Tipo de documento
+sobre.vehiculo.table.numdoc=Número de documento
+sobre.vehiculo.table.nombre=Nombre
 sobre.vehiculo.table.anigrav= Año Gravable
 sobre.vehiculo.table.placa= Placa
 sobre.vehiculo.table.marca = Marca
@@ -3394,6 +3397,7 @@ sobre.vehiculo.table.factura= Factura
 sobre.vehiculo.table.linea= Línea
 sobre.vehiculo.table.modelo= Modelo
 sobre.vehiculo.table.clase= Clase
+sobre.vehiculo.table.carroceria=Carrocería
 sobre.vehiculo.table.numpuertas= No. Puertas
 sobre.vehiculo.table.blindado= Blindado
 sobre.vehiculo.table.cilindraje= Cilindraje
@@ -3401,12 +3405,14 @@ sobre.vehiculo.table.avaluo= Avalúo
 
 sobre.vehiculo.detail.title= Detalle
 sobre.vehiculo.detail.placa= Placa
-sobre.vehiculo.detail.idServicio= Id de servicio
-sobre.vehiculo.detail.idestado= Id Estado
+sobre.vehiculo.detail.idServicio= ID de servicio
+sobre.vehiculo.detail.idestado= ID estado
 sobre.vehiculo.detail.watts=Watts
 sobre.vehiculo.detail.clasanti= Clásico o Antiguo
+sobre.vehiculo.detail.tipvehiculo=Tipo de vehículo
 sobre.vehiculo.detail.cappasa= Capacidad pasajeros
 sobre.vehiculo.detail.capton= Capacidad toneladas
+sobre.vehiculo.detail.fecinacti=Fecha de inactivación
 sobre.vehiculo.detail.feccambio= Fecha cambio servicio
 sobre.vehiculo.detail.feccance= Fecha cancelación
 
@@ -3428,12 +3434,12 @@ sobre.vehiculo.marcas.fecdesde= Fecha desde
 sobre.vehiculo.marcas.fechasta= Fecha hasta
 
 sobre.vehiculo.liqui.title= Liquidación
-sobre.vehiculo.liqui.avaactual= Avalúo actual
-sobre.vehiculo.liqui.tarfiactual= Tarifa actual
-sobre.vehiculo.liqui.tipvehiculo= Tipo de vehículo
+sobre.vehiculo.liqui.avaactual= Avalúo
+sobre.vehiculo.liqui.tarfiactual= Tarifa
+sobre.vehiculo.liqui.anio= Año
 sobre.vehiculo.liqui.regresar= Regresar
-sobre.vehiculo.liqui.descfactura= Descarga de factura
-sobre.vehiculo.liqui.presdecla= Presentar declaración
+sobre.vehiculo.liqui.descfactura= Descargar factura vigencia actual
+sobre.vehiculo.liqui.presdecla= Generar declaración vigencia actual
 
 
 predial.unificado.table.title= Predial Unificado
@@ -4557,14 +4563,14 @@ conciliaciones.header.title=Entidades Bancarias
 conciliaciones.header.description=Desde el año 2008 y en el marco del plan estratégico la Dirección de Impuestos de Bogotá se incluyó en el desarrollo del Sistema Tributario SIT II un componente de recepción de información tributaria, encargada de recibir, validar, generar reportes de aceptación o rechazo y cargar en la base de datos tributaria la información transmitida magnéticamente a través de la web, por las entidades bancarias que tienen convenio vigente con la Secretaria Distrital de Hacienda, para la recepción de los tributos distritales.
 
 #->INI dev-maria 22/05/2019 textos para Sobre Vehículos automotores Declaracion
-sobre.vehiculo.declaracion.vehiculo.title=Declaración de Vehículos
+sobre.vehiculo.declaracion.vehiculo.title=Declaración de vehículos
 sobre.vehiculo.declaracion.vehiculo.descripcion1=El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá.
 sobre.vehiculo.declaracion.vehiculo.descripcion2=Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM.
 sobre.vehiculo.declaracion.vehiculo.aniograv=Año gravable
 sobre.vehiculo.declaracion.vehiculo.placa=Placa
-sobre.vehiculo.declaracion.vehiculo.opuso=Opciones de uso
+sobre.vehiculo.declaracion.vehiculo.opuso=Opción de uso
 
-sobre.vehiculo.declaracion.vehiculo.info.title=Información del Vehículo
+sobre.vehiculo.declaracion.vehiculo.info.title=Información del vehículo
 sobre.vehiculo.declaracion.vehiculo.info.objcontra=Objeto contrato
 sobre.vehiculo.declaracion.vehiculo.info.clase=Clase
 sobre.vehiculo.declaracion.vehiculo.info.marca=Marca
@@ -4576,20 +4582,21 @@ sobre.vehiculo.declaracion.vehiculo.info.fecfactura=Fecha de factura
 sobre.vehiculo.declaracion.vehiculo.info.captone=Capacidad de toneladas
 sobre.vehiculo.declaracion.vehiculo.info.carroceria=Carrocería
 sobre.vehiculo.declaracion.vehiculo.info.cilindra=Cilindraje
-sobre.vehiculo.declaracion.vehiculo.info.tipvehi=Tipo de Vehículo
+sobre.vehiculo.declaracion.vehiculo.info.tipvehi=Tipo de vehículo
 sobre.vehiculo.declaracion.vehiculo.info.avaluo=Avalúo
 sobre.vehiculo.declaracion.vehiculo.info.clasant=Clásico o antiguo
 sobre.vehiculo.declaracion.vehiculo.info.idservicio=ID servicio
 sobre.vehiculo.declaracion.vehiculo.info.watts=Watts
 
-sobre.vehiculo.declaracion.vehiculo.liq.title=Liquidación del Impuesto
+sobre.vehiculo.declaracion.vehiculo.liq.title=Liquidación del impuesto
+sobre.vehiculo.declaracion.vehiculo.liq.aporte=¿Deseas realizar el aporte voluntario del 10%?
 sobre.vehiculo.declaracion.vehiculo.liq.valimpcar=Valor impuesto a cargo
 sobre.vehiculo.declaracion.vehiculo.liq.avalact=Avalúo actual
 sobre.vehiculo.declaracion.vehiculo.liq.taract=Tarifa actual
 sobre.vehiculo.declaracion.vehiculo.liq.clasdh=Clase SDH
 sobre.vehiculo.declaracion.vehiculo.liq.linhomo=Línea homologación
 sobre.vehiculo.declaracion.vehiculo.liq.tipvesdh=Tipo de Vehículo SDH
-sobre.vehiculo.declaracion.vehiculo.liq.apovol=Aporte voluntario
+sobre.vehiculo.declaracion.vehiculo.liq.fuenhomo=Fuente de homologacion
 sobre.vehiculo.declaracion.vehiculo.liq.proapovol=Programa del aporte voluntario
 sobre.vehiculo.declaracion.vehiculo.liq.sancion=Sanción
 sobre.vehiculo.declaracion.vehiculo.liq.intereses=Intereses
@@ -4599,6 +4606,7 @@ sobre.vehiculo.declaracion.vehiculo.liq.totpag=Total a pagar
 sobre.vehiculo.declaracion.vehiculo.liq.valpagar=Valor a pagar
 sobre.vehiculo.declaracion.vehiculo.liq.totpagvol=Total con pago voluntario
 sobre.vehiculo.declaracion.vehiculo.liq.calcular=Calcular
+sobre.vehiculo.declaracion.vehiculo.liq.proyecto=Proyecto
 
 sobre.vehiculo.declaracion.vehiculo.firma.title=Información Firma del Declarante
 sobre.vehiculo.declaracion.vehiculo.firma.tipiden=Tipo de Identificación
