Se adecua funcionalidad de publicidad exterior a cambios funcionales realizados.

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -128,6 +128,7 @@ type.SDHExteriorPublicityTax.name=Impuesto a publicidad Exterior
 type.SDHExteriorPublicityTax.resolutionNumber.name=Número de Resolución
 type.SDHExteriorPublicityTax.fenceType.name=Tipo de Valla
 type.SDHExteriorPublicityTax.objectNumber.name=Número de Objeto
+type.SDHExteriorPublicityTax.anoGravable.name=Año Gravable
 
 type.SDHAgent.name=Agente
 type.SDHAgent.documentNumber.name=Número de Documento
