Se agregan cambios a Obligaciones pendientes y ROP, se comenta en mpex la sección de Pagos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4792,7 +4792,7 @@ rop.generar.puext.seleccionar=Seleccionar
 rop.generar.puext.rop=Generar ROP
 
 rop.generar.valobli=Valor de la obligación
-rop.generar.genrop=Generar ROP por valor total
+rop.generar.genrop=Generar ROP
 rop.generar.genparcial=Generar ROP por valor parcial
 rop.generar.totalpagar=Total a pagar
 rop.generar.parcial=Parcial a pagar
