Se agrega el campo de selección rol para la página de registro

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4811,6 +4811,7 @@ tramites.crear.inicial.tiptramite=Tipo de trámite
 tramites.crear.inicial.subtramite=Sub trámite
 tramites.crear.inicial.categoria=Categoría
 tramites.crear.inicial.subcategoria=Sub categoría
+tramites.crear.inicial.rol=Rol
 tramites.crear.inicial.mensaje=Mensaje
 tramites.crear.inicial.nota=Máximo 1000 caracteres
 tramites.crear.inicial.adjuntar=Adjuntar documento
