Se agregan páginas de Facturación

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4862,7 +4862,38 @@ terceros.notario.buscar.numdoc=Número de documento
 terceros.notario.buscar.impuesto=Impuesto
 terceros.notario.buscar.buscar= Buscar
 
+#Facturación
+descarga.factura.inicial.titulo= Descarga de Factura
+descarga.factura.inicial.impuesto=Impuesto
+descarga.factura.inicial.anio=Año gravable
+descarga.factura.inicial.buscar=Buscar
 
+descarga.factura.predial.chip=CHIP
+descarga.factura.predial.matinm=Matrícula inmobiliaria
+descarga.factura.predial.dirpred=Dirección del predio
+descarga.factura.predial.selec=Seleccionar
+descarga.factura.predial.desfact=Descarga de factura
+
+descarga.factura.vehiculo.placa=Placa
+descarga.factura.vehiculo.marca=Marca
+descarga.factura.vehiculo.selec=Seleccionar
+descarga.factura.vehiculo.desfac=Descarga de factura
+
+reexpedicion.factura.inicial.titulo= Reexpedición de factura
+reexpedicion.factura.inicial.impuesto=Impuesto
+reexpedicion.factura.inicial.anio=Año gravable
+reexpedicion.factura.inicial.buscar=Buscar
+
+reexpedicion.factura.predial.chip=CHIP
+reexpedicion.factura.predial.matinm=Matrícula inmobiliaria
+reexpedicion.factura.predial.dirpred=Dirección del predio
+reexpedicion.factura.predial.selec=Seleccionar
+reexpedicion.factura.predial.desfact=Reexpedición de factura
+
+reexpedicion.factura.vehiculo.placa=Placa
+reexpedicion.factura.vehiculo.marca=Marca
+reexpedicion.factura.vehiculo.selec=Seleccionar
+reexpedicion.factura.vehiculo.desfac=Reexpedición de factura
 
 
 
